--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -10,7 +10,7 @@ https://github.com/Robinyo/big-top/tree/master/src/pages/sign-in -->
 
 
 <ion-content  padding >
-<form #f="ngForm" (ngSubmit)="submitForm(f)">
+<form #f="ngForm" (ngSubmit)="authenticate(f)">
 <ion-grid>
   <ion-row>
     <ion-col text-center>
