--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,40 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+    <ion-menu slot="start" menuId="m1">
+        <ion-header>
+          <ion-toolbar>
+          <ion-title>User Info</ion-title>
+        </ion-toolbar>
+        </ion-header>
+  
+        <ion-content>
+          <ion-list>
+            <ion-menu-toggle>
+            <ion-item lines="none" routerLink='/places/tabs/discover'>
+              <ion-icon name="business"slot="start"></ion-icon>
+              <ion-label>Payment History</ion-label>
+            </ion-item>
+          </ion-menu-toggle>
+  
+          <ion-menu-toggle>
+              <ion-item lines="none" routerLink='/approvals'>
+                <ion-icon slot="start" name="checkbox-outline"></ion-icon>
+                <ion-label>Approvals</ion-label>
+              </ion-item>
+            </ion-menu-toggle>
+  
+            <ion-menu-toggle>
+              <ion-item lines="none" (click)="onLogout()" button>
+                  <ion-icon slot="start" name="exit"></ion-icon>
+                  <ion-label>Logout</ion-label>
+                </ion-item>
+              </ion-menu-toggle>
+  
+          </ion-list>
+  
+  
+        </ion-content>
+  
+  
+    </ion-menu>
+  <ion-router-outlet main></ion-router-outlet>
 </ion-app>
