--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,14 +9,14 @@
         <ion-content>
           <ion-list>
             <ion-menu-toggle>
-            <ion-item lines="none" routerLink='/places/tabs/discover'>
+            <ion-item lines="none" routerLink='/payment'>
               <ion-icon name="business"slot="start"></ion-icon>
               <ion-label>Payment History</ion-label>
             </ion-item>
           </ion-menu-toggle>
   
           <ion-menu-toggle>
-              <ion-item lines="none" routerLink='/approvals'>
+              <ion-item lines="none" routerLink='/approval'>
                 <ion-icon slot="start" name="checkbox-outline"></ion-icon>
                 <ion-label>Approvals</ion-label>
               </ion-item>
