--- a/src/app/dashboard/dashboard.page.html
+++ b/src/app/dashboard/dashboard.page.html
@@ -3,6 +3,9 @@
       <ion-buttons slot="start">
       <ion-menu-button menu="m1"></ion-menu-button>
     </ion-buttons>
+    <ion-buttons slot="primary">
+        <ion-button routerLink="/dashboard" disabled="true"><ion-icon name="home"></ion-icon></ion-button>
+      </ion-buttons>
       <ion-title>Dashboard</ion-title>
     </ion-toolbar>
   </ion-header>
