--- a/src/app/payment/payment.page.html
+++ b/src/app/payment/payment.page.html
@@ -3,7 +3,10 @@
       <ion-buttons slot="start">
       <ion-menu-button menu="m1"></ion-menu-button>
     </ion-buttons>
-      <ion-title>Dashboard</ion-title>
+    <ion-buttons slot="primary">
+        <ion-button routerLink="/dashboard"><ion-icon name="home"></ion-icon></ion-button>
+      </ion-buttons>
+      <ion-title>Payments</ion-title>
     </ion-toolbar>
   </ion-header>
   
@@ -27,32 +30,32 @@
               <ion-card-content>
                   <ion-row>
                     <ion-col size="6">
-                        <p>Amount : {{pay.amount}}</p>
+                        <p>Amount:{{pay.amount}}</p>
                     </ion-col  >
                     <ion-col size="6">
-                        <p>Status : {{pay.status}}</p>
+                        <p>Status:{{pay.status}}</p>
                     </ion-col>
                     <ion-col size="6">
-                        <p>Date : {{pay.paymentDate | date}}</p>
+                        <p>Date:{{pay.paymentDate | date}}</p>
                     </ion-col  >
                     <ion-col size="6">
-                        <p >Create Date : {{pay.crtDate | date}}</p>
+                        <p >Create:{{pay.crtDate | date}}</p>
                     </ion-col>
                   </ion-row> 
                     <ion-row *ngIf="isGroupShown(i)">
                         <ion-col size="12">
-                            <p>Aprroved Date : 25-03-2018</p>
+                            <p>Aprroved Date:25-03-2018</p>
                         </ion-col>
                         <ion-col size="12">
-                            <p>Approved by : success</p>
+                            <p>Approved by:success</p>
                         </ion-col>
                       <ion-col size="12">
                           <div >NA</div>
                       </ion-col>
                   
                       <div padding text-center class="ion-padding-start">
-                          <ion-button fill="outline" color="danger"  (click)="processPay('reject',i)"> <ion-icon slot="start" name="close"></ion-icon>Reject</ion-button>
-                          <ion-button  (click)="processPay('approve',i)"><ion-icon slot="start" name="add"></ion-icon>Approve</ion-button>
+                          <ion-button fill="outline" color="danger"  (click)="processPay('reject',pay._id)"> <ion-icon slot="start" name="close"></ion-icon>Reject</ion-button>
+                          <ion-button  (click)="processPay('approve',pay._id)"><ion-icon slot="start" name="add"></ion-icon>Approve</ion-button>
                         </div>
                     </ion-row>
                    
@@ -62,10 +65,6 @@
                     <ion-icon   (click)="toggleGroup(i)" style="zoom:1.8;"  color="success" item-right [name]="isGroupShown(i) ? 'arrow-dropdown' : 'arrow-dropright'"></ion-icon>
                 </div>
               </ion-card>
-      <!--     <p>{{d.title}}</p>
-        </ion-col>
-        <ion-col size="12" size-sm="8" offset-sm="2" *ngIf="isGroupShown(i)">
-            <p >{{d.description}}</p> -->
           </ion-col>
       </ion-row>
     </ion-grid>
